# local-celeb

./: .gitignore  Pimsleur Italian 1 - Unit 02 - prediction.md  components.json  package.json  scar_isolated.json  tsconfig.json
.claude/: settings.local.json
data_prep/: README.md  prepare_dataset.py  pyproject.toml
data_prep/output/: metadata.csv
docs/: roadmap-v3.md
docs/archive/: roadmap-v2.md  tooling-comparison.md
docs/planning/: 01-initial-brainstorming.md  04-technical-framework.md  07-transcript-editor-analysis.md  08-character-llm-finetuning.md  09-next-steps-summary.md
docs/scar-audio/: Orpheus_(3B)_TTS.ipynb  scar-isolated-transcript.txt
nb/: Orpheus_(3B)-TTS.ipynb
planning/: 02-project-proposal.md  05-resource-links.md  06-cinematic-voice-weaver-roadmap.md
scar-audio/: R8_J60CFNAH.md  scar-assistant-roadmap.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/TranscriptionEditor/: AudioPlayer.tsx  SpeakerManager.tsx  TranscriptionView.tsx  WordLevelEditor.tsx
src/components/TranscriptionTools/: ExportService.tsx
src/hooks/: useAudioPlayer.ts  useTranscription.ts
src/types/: transcription.ts
src/utils/: transcriptionUtils.ts
