[project]
name = "data-prep"
version = "0.1.0"
description = ""
authors = [
    {name = "Gemini",email = "gemini@google.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydub (>=0.25.1,<0.26.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
